# ExMage

./: CMakeLists.txt  CameraCore.h  ConfigReader.cpp  ConfigReader.h  CoreTube.cpp  CoreTube.h  Explorable.cpp  Explorable.h  Frame.cpp  LICENSE  Makefile  PNGWriter.cpp  PNGWriter.h  ProcIndex.h  README.md  Simulator.cpp  Simulator.h  VectorFieldReader.cpp  _config.yml  batch.sh.sample  configure.json.sample  configure.txt.sample  index.html  index.md  main.cpp  mkpath.h  params.json
Geometry/: Makefile  common.h  point.c  quaternion.h
composition/: CMakeLists.txt  GlobalComposite.cpp  GlobalComposite.h
geometry/: CMakeLists.txt  point.h  quaternion.cpp  vector.h
insitu/: CMakeLists.txt  Explorable.cpp
insitu/composition/: GlobalComposite.cpp
insitu/examples/: CMakeLists.txt
insitu/examples/supernova/: CMakeLists.txt  configure.json
insitu/particleadvector/: ParticleAdvector.cpp  ParticleAdvector.h  PtclSync.cpp  PtclSync.h  VectorFieldReader.cpp
insitu/tubegenerator/: CoreTube.cpp  CoreTube.h
insitu/tubegenerator/shaders/: scalar1.frag
insitu/utilities/: APNGWriter.h  DomainInfo.cpp  DomainInfo.h  Field.h  Frame.cpp  VectorField.h  mkpath.h  picojson.h
particleadvector/: CMakeLists.txt  DomainUtility.cpp  DomainUtility.h  ParticleAdvector.cpp  ParticleAdvector.h  PtclSync.cpp  PtclSync.h  VectorFieldReader.cpp
particletracer/: CMakeLists.txt  Simulator.cpp  Simulator.h  VectorFieldReader.h
progress/: index.html
progress/assets/css/: lightbox.css  my.css
progress/assets/js/: lightbox.js
shaders/: color.frag  color.vert  normal.vert  scalar0.frag
test/: CMakeLists.txt  Makefile  configure.json  readconfig.cpp  readjson.cpp
test/insitu/: CMakeLists.txt
test/insitu/utilities/: CMakeLists.txt  vector3d.cpp  vectorField.cpp
test/utilities/: CMakeLists.txt  field.cpp  vector3d.cpp  vectorField.cpp
tubegenerator/: CMakeLists.txt  CoreTube.cpp  CoreTube.h  Particle.h  TransferFunction.cpp  TransferFunction.h
tubegenerator/shaders/: normal.frag  scalar0.vert  scalar1.vert  scalar2.frag  scalar2.vert
utilities/: APNGWriter.cpp  CMakeLists.txt  CameraCore.h  ConfigReader.cpp  ConfigReader.h  DomainInfo.cpp  DomainInfo.h  Field.h  Frame.h  PNGReader.cpp  PNGReader.h  Particle.cpp  Particle.h  ProcIndex.cpp  Vector.h  VectorField.h  cread.c  embedfile.c  mkpath.cpp
viewer/: APNGReader.cpp  APNGReader.h  CameraCore.cpp  CameraCore.h  Frame.cpp  Frame.h  TF.cpp  TFEditor.cpp  TFEditor.h  exmage-viewer.pro  lightctrl.cpp  lightctrl.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  point.cpp  point.h  shaders.qrc  vector.cpp  vector.h  viewer.cpp  viewer.h
viewer/shaders/: pointcloud.vert
